# shards

./: .gitignore  README.md  changelog.md  main.py  pyproject.toml
docs/dev/: developement.md
src/shards/: __init__.py
src/shards/logger/: logger.py
src/shards/mdl/: mdl.py
tests/: test_logger.py  test_mdl.py
