[project]
name = "shards"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "pre-commit",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "termcolor>=3.1.0",
]

[tool.ruff]
extend-exclude = ["src/shards/__init__.py"]